@startuml
title 模板方法模式（三种难度的游戏主流程）

package "Template Method" {
  abstract class Game {
    - timeInterval: int
    # enemySpawnCycle: double
    # shootCycle: double
    # bossScoreThreshold: int
    + final action(): void
    # initDifficultyParams(): void
    # isBossEnabled(): boolean
    # getBossHp(spawnCount: int): int
    # increaseDifficultyIfNeeded(): void
    + freezeEnemies(millis: long): void
    + addScore(delta: int): void
  }

  class EasyGame
  class NormalGame
  class HardGame
}

package "Application" {
  class Main {
    + startGame(difficulty: GameDifficulty): void
  }

  enum GameDifficulty {
    EASY
    MEDIUM
    HARD
  }
}

Game <|-- EasyGame
Game <|-- NormalGame
Game <|-- HardGame

Main ..> Game : create & run
Main ..> GameDifficulty

@enduml
